fix: added `/books-lease/leases/available` endpoint
